# game-of-life

./: Dockerfile  README.md  animator.py  game.py  pyproject.toml  requirements.txt
src/game_of_life/: __main__.py
src/game_of_life_animation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
